# ProcessSimulator

./: CMakeLists.txt  README.txt  install_dependencies.sh
glade/: window.glade  window.glade~
include/: file_reader.h  functions.h  tree_view.h  widgets.h
src/: file_reader.c  functions.c  main.c  tree_view.c  widgets.c
testes/: teste.sop  teste2.sop  teste3.sop  teste4.sop  teste5.sop  teste_prioridade.sop
